--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <spring.version>4.3.13.RELEASE</spring.version>
         <junit.version>4.12</junit.version>
         <java.version>1.7</java.version>
+        <mockito.version>1.10.19</mockito.version>
     </properties>
 
     <dependencies>
@@ -32,6 +33,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
 
