--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <expression.language.version>3.0.0</expression.language.version>
         <glassfish.expression.language>2.2.6</glassfish.expression.language>
         <hibernate.validator.version>5.4.2.Final</hibernate.validator.version>
+        <apache.commons-lang3.version>3.6</apache.commons-lang3.version>
     </properties>
 
     <dependencies>
@@ -88,7 +89,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.6</version>
+            <version>${apache.commons-lang3.version}</version>
         </dependency>
 
         <dependency>
