fixing REST endpoint URL path

--- a/src/main/resources/webapp/WEB-INF/web.xml
+++ b/src/main/resources/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
 
     <servlet-mapping>
         <servlet-name>SpringServlet</servlet-name>
-        <url-pattern>/snowman/*</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
 
