--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <glassfish.expression.language>2.2.6</glassfish.expression.language>
         <hibernate.validator.version>5.4.2.Final</hibernate.validator.version>
         <apache.commons-lang3.version>3.6</apache.commons-lang3.version>
+        <jackson.databind.version>2.5.0</jackson.databind.version>
     </properties>
 
     <dependencies>
@@ -108,6 +109,12 @@
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-webapp</artifactId>
             <version>${jetty.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.databind.version}</version>
         </dependency>
 
     </dependencies>
