--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <hibernate.validator.version>5.4.2.Final</hibernate.validator.version>
         <apache.commons-lang3.version>3.6</apache.commons-lang3.version>
         <jackson.databind.version>2.5.0</jackson.databind.version>
+        <hsqldb.version>2.3.2</hsqldb.version>
     </properties>
 
     <dependencies>
@@ -115,6 +116,12 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.databind.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>${hsqldb.version}</version>
         </dependency>
 
     </dependencies>
