added logging dependency

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <h2.version>1.4.187</h2.version>
         <derby.version>10.11.1.1</derby.version>
         <mysql.version>6.0.6</mysql.version>
+        <slf4j.api.version>1.7.25</slf4j.api.version>
     </properties>
 
     <dependencies>
@@ -149,6 +150,12 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.api.version}</version>
         </dependency>
 
     </dependencies>
