--- a/src/main/resources/persistence-mysql.properties
+++ b/src/main/resources/persistence-mysql.properties
@@ -7,4 +7,5 @@ jdbc.password=password
 # hibernate.X
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
+# validate | update | create | create-drop
 hibernate.hbm2ddl.auto=create-drop
