--- a/src/main/resources/persistence-mysql.properties
+++ b/src/main/resources/persistence-mysql.properties
@@ -8,4 +8,4 @@ jdbc.password=password
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
 # validate | update | create | create-drop
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=validate
