--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,12 @@
             <version>${joda.time.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
 
     </dependencies>
 
