adding JMS section to application.properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
 # validate | update | create | create-drop
 hibernate.hbm2ddl.auto=validate
+
+# Messaging - JMS
+jms.brokerUrl=tcp://localhost:61616
