--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <joda.time.version>2.9.9</joda.time.version>
         <ehcache.version>2.9.0</ehcache.version>
         <activemq-spring.version>5.10.0</activemq-spring.version>
+        <quartz.version>2.2.1</quartz.version>
     </properties>
 
     <dependencies>
@@ -232,6 +233,12 @@
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-spring</artifactId>
             <version>${activemq-spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>${quartz.version}</version>
         </dependency>
 
     </dependencies>
