--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,13 @@
             <version>${quartz.version}</version>
         </dependency>
 
+        <!-- required for Spring - Quartz -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
